--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="img/favicon.png" />
     <title>Pokedex - Replica</title>
   </head>
   <body>
@@ -40,10 +41,10 @@
                     </div>
                     <div class="screen__stats">
                       <p class="stats__weight">
-                        weight: <span class="poke-weight"></span>
+                        Weight: <span class="poke-weight"></span>
                       </p>
                       <p class="stats__height">
-                        height: <span class="poke-height"></span>
+                        Height: <span class="poke-height"></span>
                       </p>
                     </div>
                   </div>
